Improve grammar projects page

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -36,14 +36,16 @@
                                         <img src="../assets/images/Kotlin_logo.png" style="width: 218px;" alt="Logo Kotlin project"
                                             class="card-img-top img-fluid mx-auto">
                                         <div class="card-body">
-                                            <h6><strong>Kotlin Dimensions Project</strong></h6>
-                                            <p>This project, is part of one of the reason why I came to Canada to learn AI, 
-                                                something that keep on stand by for several years. "TOP SECRET" until be ready to deploy.</p>
+                                            <h6><strong>Kotlin video Project</strong></h6>
+                                            <p>This project is a significant step in my journey as an AI enthusiast focused on image management. I am exploring various approaches to achieve optimal results, 
+                                                including training models and utilizing generative AI with or without cloud services. 
+                                                The goal is to identify the most efficient and effective methods for implementation
+                                                .</p>
                                             
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Kotlin, Android Studio </p>
                                             <p><strong>Status:</strong> 1 Phase - Research </p>
-                                            <div class="progress" style="height: 20px;">
+                                            <div class="progress mb-2" style="height: 20px;">
                                                 <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
                                             </div>
                                         </div>
@@ -56,12 +58,13 @@
                                             class="card-img-top img-fluid mx-auto">
                                         <div class="card-body">
                                             <h6><Strong>Retrievel Augmented Generation Project</strong> </h6>
-                                            <p>This project, keep me expanding the AI knowledge base on AI Agents. "TOP SECRET" until be ready to deploy.</p>
-                                            
+                                            <p>This project expands my knowledge in AI Generative models, focusing on the development of a RAG or GRAG chatbot using
+                                                 cutting-edge models based on recent research papers. The goal is to explore novel approaches to enhance chatbot 
+                                                 performance through advanced retrieval-augmented techniques.</p>                                            
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Python, PyCharm, OpenAI, NLP, LLM </p>
                                             <p><strong>Status:</strong> Test - 1st Demo version</p>
-                                            <div class="progress" style="height: 20px;">
+                                            <div class="progress mt-4" style="height: 20px;">
                                                 <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                                             </div>
                                         </div>
@@ -208,11 +211,12 @@
                                             class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h6><strong>Personal Portfolio (Web App)</strong></h6>
-                                            <p>Minimalistic personal portfolio.</p>
+                                            <p>This project is my personal endeavor into frontend development, focusing on creating a website that showcases information,
+                                                 photos, and other content. It serves as a platform for experimenting with new web technologies and design techniques.</p>
                                             <p><strong>Role:</strong> Developer</p>
                                             <p><strong>Languages:</strong> JavaScript, NodeJS, ExpressJS, Express
-                                                Generator, Bootstrap, Jquery.</p>
-                                            <p><strong>Status:</strong> In progress - <a
+                                                Generator, Bootstrap, Jquery, CSS.</p>
+                                            <p><strong>Status:</strong> In progress continuosly - <a
                                                     href="https://github.com/Jbaruz/jbaruz" target="_blank">Github
                                                     repo</a></p>
                                         </div>
@@ -246,21 +250,20 @@
                         <div class="row">
                             <!-- Kiruwear App -->
                             <div class="col-md-4 mb-4">
-                                <div class="card shadow-sm h-90">
+                                <div class="card shadow-sm h-100">
                                     <div class="card-body">
                                         <h6><strong>Remote Wear Monitoring App (Mobile App)</strong></h6>
-                                        <p>Remote wear control app to prevent unplanned downtime for heavy mining equipment.
-                                            This app was awarded a Digital Transformation Award in 2021.
+                                        <p>A remote app for monitoring GET wear, aimed at preventing unplanned downtime and reducing 
+                                            operator-mechanic interactions to minimize COVID-19 transmission.
+
                                         </p>
                                         <p><strong>Role:</strong> Creator, Manager, and System Analyst</p>
                                         <p><strong>Languages:</strong> Flutter, PHP Codeigniter</p>
                                         <p><strong>Status:</strong> Complete </p>
-
                                         <p><strong>Objectives</strong></p>
                                         <p>. Reduce social distancing during equipment inspections.</p>
                                         <p>. Help customers be more efficient in monitoring equipment wear.</p>
                                         <p>. Learn about equipment wear through an online platform.</p>
-
                                     </div>
                                 </div>
                             </div>
@@ -276,13 +279,14 @@
                             </div>
                             <!-- Company Objectives -->
                             <div class="col-md-4 mb-4">
-                                <div class="card shadow-sm h-90">
+                                <div class="card shadow-sm h-100">
                                     <img src="../assets/images/recognition.png" alt="Recognition"
                                         class="card-img-top img-fluid">
                                     <div class="card-body">
                                         
                                         <h6><strong>2020 Technology Award</strong></h6>
-                                        <p>For this innovation, I received a prestigious Technology Award from the company I worked with.
+                                        <p>This innovation won a prestigious Technology Award and also earned a Digital Transformation Award in
+                                         a major mining operation.
                                         </p>
                                     </div>
                                 </div>
