Improve citation code on index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
 
-<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 19-09-2024 -->
+<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 23-09-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
@@ -29,9 +29,9 @@
                         <div class="card-body text-light bg-primary">
                             <h2 class="card-title text-light text-opacity-75">Hi, I'm Juan!</h2>
                             <h5 class="mt-4 text-light text-opacity-50">Esential Quotes</h5>
-                            <blockquote class="blockquote">
+                            <blockquote class="blockquote"> 
                                 <p>"Experience is the name everyone gives to their mistakes"</p>
-                                <p class="blockquote-footer bg-primary text-black text-opacity-75 text-center">Oscar Wilde, Irish Playwright</p>
+                                <p class="blockquote-footer bg-primary text-black text-opacity-75 text-center">Oscar Wilde, <cite title="Source Title">Irish Playwright</cite></p>
                             </blockquote>
                             <blockquote class="blockquote">
                                 <p>“Our Character is what we do when we think no one is looking.”</p>
