Add new project mathpractice in projects.ejs

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 21-09-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 25-09-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
 
@@ -45,7 +45,7 @@
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Kotlin, Android Studio </p>
                                             <p><strong>Status:</strong> 1 Phase - Research </p>
-                                            <div class="progress mb-2" style="height: 20px;">
+                                            <div class="progress mt-3" style="height: 20px;">
                                                 <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
                                             </div>
                                         </div>
@@ -70,6 +70,48 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- Mathpractice 2 version-->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/mathpractice1.png" alt="Mathpractice screenshot"
+                                            class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h6><strong>Mathpractice (2nd version) </strong></h6>
+                                            <p> Building on the first version, I am enhancing the app with AI to provide personalized feedback based 
+                                                on the child’s performance, aiming to improve their understanding of mathematical concepts.
+                                            </p>
+                                            <p><strong>Role:</strong> Developer</p>
+                                            <p><strong>Skills:</strong> Python, PyQt5, PythonGUIS, LLM.
+                                            </p>
+                                            <p><strong>Status:</strong> Plan development - <a 
+                                                href="https://github.com/Jbaruz/mathpractice?tab=readme-ov-file"
+                                                target="_blank">Github</a>
+                                            </p>
+                                            <div class="progress mt-2" style="height: 20px;">
+                                                <div class="progress-bar" role="progressbar" style="width: 5%;" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">5%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Mathpractice -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/mathpractice.png" alt="Mathpractice screenshot"
+                                            class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h6><strong>Mathpractice (1st version) </strong></h6>
+                                            <p>A personalized math app I developed for my daughter to improve skills in addition, subtraction, and multiplication of positive and negative integers.
+                                                 The app uses a rule-based system that adapts to the user's weaknesses, generating targeted practice questions based on performance.</p>
+                                            
+                                            <p><strong>Role:</strong> Developer</p>
+                                            <p><strong>Skills:</strong> Python, PyQt5, PythonGUIS.
+                                            </p>
+                                            <p><strong>Status:</strong> Complete - <a 
+                                                href="https://github.com/Jbaruz/mathpractice?tab=readme-ov-file"
+                                                target="_blank">Github</a></p>
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- Waste Bin Classifiation -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
@@ -84,7 +126,7 @@
                                             
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Python, TensorFlow, CNN, Keras, PIL,
-                                                 Wandb </p>
+                                                    Wandb </p>
                                             <p><strong>Status:</strong> Complete - <a 
                                                 href="https://github.com/Jbaruz/waste_bin_classificcation"
                                                 target="_blank">Github</a></p>
