--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 25-09-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 26-09-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
 
@@ -83,9 +83,7 @@
                                             <p><strong>Role:</strong> Developer</p>
                                             <p><strong>Skills:</strong> Python, PyQt5, PythonGUIS, LLM.
                                             </p>
-                                            <p><strong>Status:</strong> Plan development - <a 
-                                                href="https://github.com/Jbaruz/mathpractice?tab=readme-ov-file"
-                                                target="_blank">Github</a>
+                                            <p><strong>Status:</strong> Plan development
                                             </p>
                                             <div class="progress mt-2" style="height: 20px;">
                                                 <div class="progress-bar" role="progressbar" style="width: 5%;" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">5%</div>
@@ -106,9 +104,8 @@
                                             <p><strong>Role:</strong> Developer</p>
                                             <p><strong>Skills:</strong> Python, PyQt5, PythonGUIS.
                                             </p>
-                                            <p><strong>Status:</strong> Complete - <a 
-                                                href="https://github.com/Jbaruz/mathpractice?tab=readme-ov-file"
-                                                target="_blank">Github</a></p>
+                                            <p><strong>Status:</strong> Completed
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -127,7 +124,7 @@
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Python, TensorFlow, CNN, Keras, PIL,
                                                     Wandb </p>
-                                            <p><strong>Status:</strong> Complete - <a 
+                                            <p><strong>Status:</strong> Completed - <a 
                                                 href="https://github.com/Jbaruz/waste_bin_classificcation"
                                                 target="_blank">Github</a></p>
                                         </div>
