Add keyboard on header.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: header.ejs | Author: Juan Arevalo | Date: 21-09-2024 -->
+<!-- Filename: header.ejs | Author: Juan Arevalo | Date: 26-09-2024 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,7 +7,11 @@
     </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keyboards" content="Jbaruz, Juan Bibiano Arevalo Ruiz, Juan Arevalo Ruiz, Juan Arevalo, Jbaruz Github, Jbaruz-AI, Artificial Intelligence,
+    AI, Deep Learning, Machine Learning, Web, web, developer, app, Github, projects, GET, Ground Engaging Tools, TSG, Wear specialist, Peru, SSLA, Centennial,
+    Centennial College, Escocorp, Esco, Open pit mining, welding, Metallurgy Engineer, Canada, soporte tecnico GET">
     <meta name="title" content="Juan Arevalo: AI Developer & Mining Tools Specialist in Toronto">
+    <meta name="Author" content="Juan Arevalo - Jbaruz">
     <meta name="description" content="Juan Arevalo, an AI developer in Toronto studying at Centennial College with hands-on experience in abrasion tools for the industry's largest mining loader machines.">
     <meta name="google-site-verification" content="qFDrxzTf437MAo4rhygK-L5hKwfq5Z70flF0nk4whss" />
     <!-- css section -->
