--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark vh100 bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="..\assets\images\logo1.png" class="img-thumbnail rounded-square ms-4" alt="Logo Juan"></a>
+        <a class="navbar-brand" href="/"><img src="..\assets\images\logo1.png" class="img-thumbnail rounded-square body-bg ms-4" alt="Logo Juan"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
