Improve subtitle part in project.ejs

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 26-09-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 02-10-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
 
@@ -142,7 +142,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseOne1" aria-expanded="false"
                                 aria-controls="flush-collapseOne1">
-                            <h5>Projects at college: AI and Web Development</h5>
+                            <h5>Projects at College</h5>
                             </button>
                         </h2>
                     </div>
@@ -343,7 +343,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseOne3" aria-expanded="false"
                                 aria-controls="flush-collapseOne3">
-                                <h5>Innovations in Mining: Wear Abrasion Solutions</h5>
+                                <h5>Innovations and solutions in Mining</h5>
                             </button>
                     </div>
                     <div id="flush-collapseOne3" class="accordion-collapse collapse" aria-labelledby="headingOne"
