Improve paraghaph color text in projects.ejs

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -23,7 +23,7 @@
 
                     <div id="flush-collapseOne4" class="accordion-collapse collapse" aria-labelledby="headingOne"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body text-primary">
+                        <div class="accordion-body text-info">
                             "I finished my AI program at Centennial College. As part of my learning experience, I will be working on personal projects to keep learning and have been updating my AI knowledge."
                         </div>
 
@@ -149,7 +149,7 @@
 
                     <div id="flush-collapseOne1" class="accordion-collapse collapse" aria-labelledby="headingOne"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body text-primary">
+                        <div class="accordion-body text-info">
                             "As part of my learning experience at Centennial College, I developed these projects.
                             However, the AI project is particularly focused on what can be next to benefit the
                             community."
@@ -280,7 +280,7 @@
                     <div id="flush-collapseOne2" class="accordion-collapse collapse" aria-labelledby="headingOne"
                     data-bs-parent="#accordionFlushExample">
 
-                    <div class="accordion-body text-primary">
+                    <div class="accordion-body text-info">
                         "Due to the pandemic, I was compelled to create a tool to help our customers maintain
                         distance between mechanics and operators. The app was developed to monitor the wear of
                         heavy equipment components during pre-operational inspections by operators. This application won a Digital Transformation Award in 2021."
@@ -348,7 +348,7 @@
                     </div>
                     <div id="flush-collapseOne3" class="accordion-collapse collapse" aria-labelledby="headingOne"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body text-primary">
+                        <div class="accordion-body text-info">
                             "Over the course of more than fifteen years working as a technical global supporter for the
                             Spanish-speaking
                             Latin America region, I have been involved in numerous projects. Among the most significant
