--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 02-10-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 03-10-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
 
@@ -44,7 +44,7 @@
                                             
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Kotlin, Android Studio </p>
-                                            <p><strong>Status:</strong> 1 Phase - Research </p>
+                                            <p><strong>Status:</strong> 1 Phase - Research (Stand by)</p>
                                             <div class="progress mt-3" style="height: 20px;">
                                                 <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
                                             </div>
@@ -63,7 +63,7 @@
                                                  performance through advanced retrieval-augmented techniques.</p>                                            
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Python, PyCharm, OpenAI, NLP, LLM </p>
-                                            <p><strong>Status:</strong> Test - 1st Demo version</p>
+                                            <p><strong>Status:</strong> Test - 1st Demo version (working on team)</p>
                                             <div class="progress mt-4" style="height: 20px;">
                                                 <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                                             </div>
@@ -83,7 +83,7 @@
                                             <p><strong>Role:</strong> Developer</p>
                                             <p><strong>Skills:</strong> Python, PyQt5, PythonGUIS, LLM.
                                             </p>
-                                            <p><strong>Status:</strong> Plan development
+                                            <p><strong>Status:</strong> Plan development (Stand by)
                                             </p>
                                             <div class="progress mt-2" style="height: 20px;">
                                                 <div class="progress-bar" role="progressbar" style="width: 5%;" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">5%</div>
