Add new links on AI tools/links.ejs

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 21-09-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 05-10-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
                 <h2 class="text-center mb-4 text-light text-opacity-75">Important Links</h2>
@@ -574,6 +574,54 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
+                                        <i class="fa-brands fa-meta card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Meta AI</h5>
+                                            <a href="https://www.meta.ai/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-atom card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">ChatGPT</h5>
+                                            <a href="https://chat.openai.com" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>  
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-star card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Gemini</h5>
+                                            <a href="https://gemini.google.com/app" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-l card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Llama</h5>
+                                            <a href="https://www.llama.com/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
                                         <i class="fa-solid fa-circle-dot card-img mt-3 mb-3"
                                             style="font-size: 3.5em; color: black ;"></i>
                                         <div class="card-body">
@@ -595,18 +643,6 @@
                                         </div>
                                     </div>
                                 </div>
-
-                                <div class="col-md-4 mb-3">
-                                    <div class="card text-center">
-                                        <i class="fa-solid fa-atom card-img mt-3 mb-3"
-                                            style="font-size: 3.5em; color: black ;"></i>
-                                        <div class="card-body">
-                                            <h5 class="card-title">ChatGPT</h5>
-                                            <a href="https://chat.openai.com" class="btn btn-light" target="_blank"
-                                                rel="noopener noreferrer">Visit</a>
-                                        </div>
-                                    </div>
-                                </div>  
                                 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
