--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 03-10-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 07-10-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
 
@@ -61,11 +61,11 @@
                                             <p>This project expands my knowledge in AI Generative models, focusing on the development of a RAG or GRAG chatbot using
                                                  cutting-edge models based on recent research papers. The goal is to explore novel approaches to enhance chatbot 
                                                  performance through advanced retrieval-augmented techniques.</p>                                            
-                                            <p><strong>Role:</strong> AI Developer</p>
+                                            <p><strong>Role:</strong> AI Developer Collaborator</p>
                                             <p><strong>Skills:</strong> Python, PyCharm, OpenAI, NLP, LLM </p>
                                             <p><strong>Status:</strong> Test - 1st Demo version (working on team)</p>
                                             <div class="progress mt-4" style="height: 20px;">
-                                                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                                             </div>
                                         </div>
                                     </div>
