--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 08-10-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 17-10-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
                 <h2 class="text-center mb-4 text-light text-opacity-75">Important Links</h2>
@@ -709,6 +709,18 @@
                         <!-- ... Github Code ... -->
                         <div class="tab-pane fade" id="category6" role="tabpanel" aria-labelledby="category6-tab">
                             <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Amazon-bedrock-samples</h5>
+                                            <a href="https://github.com/aws-samples/amazon-bedrock-samples" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
