Add more links such as Java, Kotlin, react, node.js, etc

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 17-10-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 19-10-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
                 <h2 class="text-center mb-4 text-light text-opacity-75">Important Links</h2>
@@ -69,6 +69,42 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
+                                        <i class="fa-brands fa-java card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> Java </h5>
+                                            <a href="https://dev.java/learn/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-k card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> Kotlin </h5>
+                                            <a href="https://kotlinlang.org/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-android card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> Kotlin for Android </h5>
+                                            <a href="https://developer.android.com/kotlin/campaign/learn" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
                                         <i class="fa-solid fa-laptop-code card-img mt-3 mb-3"
                                             style="font-size: 3.5em; color: #000000;"></i>
                                         <div class="card-body">
@@ -98,6 +134,30 @@
                                         <div class="card-body">
                                             <h5 class="card-title"> R language </h5>
                                             <a href="https://cran.r-project.org/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-react card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> React </h5>
+                                            <a href="https://react.dev/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-node-js card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> Node.js </h5>
+                                            <a href="https://nodejs.org/en" class="btn btn-light"
                                                 target="_blank" rel="noopener noreferrer">Visit</a>
                                         </div>
                                     </div>
