Add more links such as prompt engineering, etc

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -209,6 +209,17 @@
                                     </div>
                                 </div>
 
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-terminal card-img mt-3 mb-3" style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Prompt_Engineering</h5>
+                                            <a href="https://www.promptingguide.ai/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
 
                         </div>
@@ -787,7 +798,19 @@
                                         <i class="fa-brands fa-github card-img mt-3 mb-3"
                                             style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
-                                            <h5 class="card-title">Building-Data-Driven-Applications-with-LlamaIndex-RAG</h5>
+                                            <h5 class="card-title">Prompt_Engineering</h5>
+                                            <a href="https://github.com/NirDiamant/Prompt_Engineering" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Building-Data-Driven-App-Llama-RAG</h5>
                                             <a href="https://github.com/PacktPublishing/Building-Data-Driven-Applications-with-LlamaIndex" class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
