--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 19-10-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 20-10-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-5 bg-black">
                 <h2 class="text-center mb-4 text-light text-opacity-75">Important Links</h2>
@@ -220,10 +220,20 @@
                                     </div>
                                 </div>
 
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-book-open-reader card-img mt-3 mb-3" style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Collocation Dictionary</h5>
+                                            <a href="https://ozdic.com/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
 
                         </div>
-
                         <!-- ... Tools ... -->
                         <div class="tab-pane fade" id="category2" role="tabpanel" aria-labelledby="category2-tab">
                             <div class="row justify-content-center">
